# AssistPy

./: README.md  assist.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat  activate.fish  activate.xsh
assistpy/data/: database.py
assistpy/plugins/: conversion.py  regex.py
assistpy/tests/: test_play.py  test_wiki.py
data/: database.py  info.py
